created rough outline for index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,71 @@
             </ul>
         </div>
     </nav>
-
+    <div class="greeting">
+        <h1>Good morning, Sarah!</h1> 
+        <img src="..."> 
+    </div>
+    <div class="shortcuts">
+        <nav class="navbar navbar-light bg-light">
+            <form class="container-fluid justify-content-start">
+              <button class="btn btn-outline-success me-2" type="button">Near by</button>
+              <button class="btn btn-outline-success me-2" type="button">No wait</button>
+              <button class="btn btn-outline-success me-2" type="button">Open now</button>
+              <button class="btn btn-outline-success me-2" type="button">24/7</button>
+            </form>
+          </nav>
+    </div>
+    <div class="restuarant_retail">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Restaurant</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Retail</h5>
+                  </div>
+                </div>
+              </div>
+    </div>
+    <div class="shortcuts2">
+        <nav class="navbar navbar-light bg-light">
+            <form class="container-fluid justify-content-start">
+              <button class="btn btn-outline-success me-2" type="button">Shoes</button>
+              <button class="btn btn-outline-success me-2" type="button">Sushi</button>
+              <button class="btn btn-outline-success me-2" type="button">Grocery</button>
+              <button class="btn btn-outline-success me-2" type="button">Music</button>
+              <button class="btn btn-outline-success me-2" type="button">Coffee</button>
+            </form>
+          </nav>
+    </div>
+    <div class="Favourites">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Baby Gap</h5>
+                  <p>$$-Baby-Casual</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Seoul Delights</h5>
+                    <p>$$-Korean-Causal</p>
+                  </div>
+                </div>
+              </div>
+    </div>
     <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
     <!----------------------------------------------->
