--- a/index.html
+++ b/index.html
@@ -2,131 +2,148 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>My BCIT Project</title>
-    <meta name="comp1800 boilerplate code" content="my bcit project">
-    <meta name="author" content="BCIT">
+  <meta charset="utf-8">
+  <title>My BCIT Project</title>
+  <meta name="comp1800 boilerplate code" content="my bcit project">
+  <meta name="author" content="BCIT">
 
-    <!-- Bootstrap for Mobile-first, and JQuery -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <!-- Bootstrap for Mobile-first, and JQuery -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/blah.css">
+  <!-- Optional styles and scripts of your own -->
 
-    <!-- Optional styles and scripts of your own -->
-    
 
 </head>
 
 <body>
 
-    <!-------------------------------------->
-    <!-- The following is HTML for layout -->
-    <!-------------------------------------->
-    <!-- Header Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="">AVS</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">my data</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="profile.html">my profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">login/signup</a>
-                </li>
-            </ul>
-        </div>
+  <!-------------------------------------->
+  <!-- The following is HTML for layout -->
+  <!-------------------------------------->
+  <!-- Header Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="">AVS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">my data</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="profile.html">my profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">login/signup</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="greeting">
+    <h1>Good morning, Sarah!</h1>
+    <div class="profile-container"><img class="profile" src="https://i.mdel.net/i/db/2018/1/829928/829928-500w.jpg">
+    </div>
+  </div>
+  <div class="shortcuts">
+    <nav class="navbar navbar-light bg-light">
+      <form class="container-fluid justify-content-start">
+        <button class="btn btn-outline-success me-2" type="button">Near by</button>
+        <button class="btn btn-outline-success me-2" type="button">No wait</button>
+        <button class="btn btn-outline-success me-2" type="button">Open now</button>
+        <button class="btn btn-outline-success me-2" type="button">24/7</button>
+      </form>
     </nav>
-    <div class="greeting">
-        <h1>Good morning, Sarah!</h1> 
-        <img src="..."> 
-    </div>
-    <div class="shortcuts">
-        <nav class="navbar navbar-light bg-light">
-            <form class="container-fluid justify-content-start">
-              <button class="btn btn-outline-success me-2" type="button">Near by</button>
-              <button class="btn btn-outline-success me-2" type="button">No wait</button>
-              <button class="btn btn-outline-success me-2" type="button">Open now</button>
-              <button class="btn btn-outline-success me-2" type="button">24/7</button>
-            </form>
-          </nav>
-    </div>
-    <div class="restuarant_retail">
-        <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Restaurant</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Retail</h5>
-                  </div>
-                </div>
-              </div>
+  </div>
+  <div class="restuarant_retail">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Restaurant</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Retail</h5>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="shortcuts2">
-        <nav class="navbar navbar-light bg-light">
-            <form class="container-fluid justify-content-start">
-              <button class="btn btn-outline-success me-2" type="button">Shoes</button>
-              <button class="btn btn-outline-success me-2" type="button">Sushi</button>
-              <button class="btn btn-outline-success me-2" type="button">Grocery</button>
-              <button class="btn btn-outline-success me-2" type="button">Music</button>
-              <button class="btn btn-outline-success me-2" type="button">Coffee</button>
-            </form>
-          </nav>
+      <nav class="navbar navbar-light bg-light">
+        <form class="container-fluid justify-content-start">
+          <div class="me-2">
+            <img class="nav-img" src="https://www.freeiconspng.com/uploads/shoe-icon-16.jpg">
+            <button class="btn btn-outline-success" type="button">Shoes</button>
+          </div>
+          <div class="me-2">
+            <img class="nav-img" src="https://cdn0.iconfinder.com/data/icons/japanese-food-8/64/japan_food_line-52-512.png">
+            <button class="btn btn-outline-success" type="button">Sushi</button>
+          </div>
+          <div class="me-2">
+            <img class="nav-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfNPDS1r_y4JFsW-F22rs_Ml_gD2vztneowg&usqp=CAU">
+            <button class="btn btn-outline-success" type="button">Grocery</button>
+          </div>
+          <div class="me-2">
+            <img class="nav-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiAE9CN7-3wEEnddYMzYpdjYEmaBD9SYN70Q&usqp=CAU">
+            <button class="btn btn-outline-success" type="button">Music</button>
+          </div>
+          <div class="me-2">
+            <img class="nav-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJhzXSR23W_Cb3B8dnR7xHAaud2jH5iOHL-A&usqp=CAU">
+            <button class="btn btn-outline-success" type="button">Coffee</button>
+          </div>
+        </form>
+      </nav>
     </div>
     <div class="Favourites">
-        <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Baby Gap</h5>
-                  <p>$$-Baby-Casual</p>
-                </div>
-              </div>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Baby Gap</h5>
+              <p>$$-Baby-Casual</p>
             </div>
-            <div class="col">
-                <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Seoul Delights</h5>
-                    <p>$$-Korean-Causal</p>
-                  </div>
-                </div>
-              </div>
-    </div>
-    <!----------------------------------------------->
-    <!-- JS: Boostrap, Firebase, API related    -->
-    <!----------------------------------------------->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Seoul Delights</h5>
+              <p>$$-Korean-Causal</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!----------------------------------------------->
+      <!-- JS: Boostrap, Firebase, API related    -->
+      <!----------------------------------------------->
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        </script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        </script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
+        </script>
 
-    <!--------------------------------------------------------------------->
-    <!-- JS files: Your own JavaScript functions included here    -->
-    <!--------------------------------------------------------------------->
+      <!--------------------------------------------------------------------->
+      <!-- JS files: Your own JavaScript functions included here    -->
+      <!--------------------------------------------------------------------->
 
 </body>
 <nav class="navbar fixed-bottom navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">AVS</a>
-    </div>
-  </nav>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">AVS</a>
+  </div>
+</nav>
+
 </html>
