Ashkans update to index.html

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   <div class="shortcuts">
     <nav class="navbar navbar-light bg-light">
       <form class="container-fluid justify-content-start">
-        <button class="btn btn-outline-success me-2" type="button">Near by</button>
-        <button class="btn btn-outline-success me-2" type="button">No wait</button>
-        <button class="btn btn-outline-success me-2" type="button">Open now</button>
-        <button class="btn btn-outline-success me-2" type="button">24/7</button>
+        <button class="top-nav-button" type="button" ><img class="top-nav-img" src="./images/pin-48.png"> Near by</button>
+        <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/running.png">No wait</button>
+        <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/green.png">Open now</button>
+        <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/door2.png">24/7</button>
       </form>
     </nav>
   </div>
