Added top horizontal scrolling bar

--- a/index.html
+++ b/index.html
@@ -56,25 +56,28 @@
       </form>
     </nav>
   </div>
-  <div class="restuarant_retail">
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-      <div class="col">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Restaurant</h5>
-          </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="card">
+        <img src="./images/restaurant.jpg">
+        <a href="#restaurant" class="card-text">Restaurant</a>
       </div>
-      <div class="col">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Retail</h5>
-          </div>
-        </div>
+      <div class="card">
+        <img src="./images/retail.jpg">
+        <a href="#retail" class="card-text">Retail</a>
       </div>
+       <div class="card">
+        <img src="./images/bank.jpg">
+        <a href="#bank" class="card-text">Bank</a>
+      </div>
+       <div class="card">
+        <img src="./images/doctor.jpg">
+        <a href="#doctor" class="card-text">Doctor</a>
+      </div>
+  
     </div>
+  </div>
+  </div>
     <div class="shortcuts2">
       <nav class="navbar navbar-light bg-light">
         <form class="container-fluid justify-content-start">
