bot nav completed

--- a/index.html
+++ b/index.html
@@ -46,15 +46,22 @@
     <div class="profile-container"><img class="profile" src="https://i.mdel.net/i/db/2018/1/829928/829928-500w.jpg">
     </div>
   </div>
-  <div class="shortcuts">
-    <nav class="navbar navbar-light bg-light">
-      <form class="container-fluid justify-content-start">
-        <button class="top-nav-button" type="button" ><img class="top-nav-img" src="./images/pin-48.png"> Near by</button>
-        <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/running.png">No wait</button>
-        <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/green.png">Open now</button>
-        <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/door2.png">24/7</button>
-      </form>
-    </nav>
+  <div class="top-short-nav">
+    <div class="container">
+      <div class="shortcuts">
+        <nav class="navbar bg-white">
+          <form class="container-fluid justify-content-start">
+            <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/pin-48.png"> Near
+              by</button>
+            <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/running.png">No
+              wait</button>
+            <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/green.png">Open
+              now</button>
+            <button class="top-nav-button" type="button"><img class="top-nav-img" src="./images/door2.png">24/7</button>
+          </form>
+        </nav>
+      </div>
+    </div>
   </div>
   <div class="container">
     <div class="row">
@@ -66,81 +73,95 @@
         <img src="./images/retail.jpg">
         <a href="#retail" class="card-text">Retail</a>
       </div>
-       <div class="card">
+      <div class="card">
         <img src="./images/bank.jpg">
         <a href="#bank" class="card-text">Bank</a>
       </div>
-       <div class="card">
+      <div class="card">
         <img src="./images/doctor.jpg">
         <a href="#doctor" class="card-text">Doctor</a>
       </div>
-  
+
     </div>
   </div>
   </div>
-    <div class="shortcuts2">
-      <nav class="navbar navbar-light bg-light">
-        <form class="container-fluid justify-content-start">
-          <div class="me-2">
-            <img class="nav-img" src="https://www.freeiconspng.com/uploads/shoe-icon-16.jpg">
-            <button class="btn btn-outline-success" type="button">Shoes</button>
-          </div>
-          <div class="me-2">
-            <img class="nav-img" src="https://cdn0.iconfinder.com/data/icons/japanese-food-8/64/japan_food_line-52-512.png">
-            <button class="btn btn-outline-success" type="button">Sushi</button>
-          </div>
-          <div class="me-2">
-            <img class="nav-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfNPDS1r_y4JFsW-F22rs_Ml_gD2vztneowg&usqp=CAU">
-            <button class="btn btn-outline-success" type="button">Grocery</button>
-          </div>
-          <div class="me-2">
-            <img class="nav-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiAE9CN7-3wEEnddYMzYpdjYEmaBD9SYN70Q&usqp=CAU">
-            <button class="btn btn-outline-success" type="button">Music</button>
-          </div>
-          <div class="me-2">
-            <img class="nav-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJhzXSR23W_Cb3B8dnR7xHAaud2jH5iOHL-A&usqp=CAU">
-            <button class="btn btn-outline-success" type="button">Coffee</button>
-          </div>
-        </form>
-      </nav>
-    </div>
-    <div class="Favourites">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Baby Gap</h5>
-              <p>$$-Baby-Casual</p>
+  <div class="second-nav">
+    <div class="container">
+      <div class="shortcuts2">
+        <nav class="navbar bg-white">
+          <form class="container-fluid justify-content-start">
+            <div class="me-2">
+              <img class="nav-img" src="https://www.freeiconspng.com/uploads/shoe-icon-16.jpg">
+              <button class="btn btn-outline-success" type="button">Shoes</button>
             </div>
-          </div>
+            <div class="me-2">
+              <img class="nav-img"
+                src="https://cdn0.iconfinder.com/data/icons/japanese-food-8/64/japan_food_line-52-512.png">
+              <button class="btn btn-outline-success" type="button">Sushi</button>
+            </div>
+            <div class="me-2">
+              <img class="nav-img"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfNPDS1r_y4JFsW-F22rs_Ml_gD2vztneowg&usqp=CAU">
+              <button class="btn btn-outline-success" type="button">Grocery</button>
+            </div>
+            <div class="me-2">
+              <img class="nav-img"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiAE9CN7-3wEEnddYMzYpdjYEmaBD9SYN70Q&usqp=CAU">
+              <button class="btn btn-outline-success" type="button">Music</button>
+            </div>
+            <div class="me-2">
+              <img class="nav-img"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJhzXSR23W_Cb3B8dnR7xHAaud2jH5iOHL-A&usqp=CAU">
+              <button class="btn btn-outline-success" type="button">Coffee</button>
+            </div>
+          </form>
+        </nav>
+      </div>
+    </div>
+  </div>
+  <div class="favourites">
+    <div class="container">
+      <h1 class="display-4">Your Favourite Queues</h1>
+      <div class="row">
+        <div class="card">
+          <img src="./images/babygap.jpg">
+          <a href="#baby-gap" class="card-text">Baby Gap</a>
+          <p>Baby &bullet; Clothing &bullet; $$</p>
         </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Seoul Delights</h5>
-              <p>$$-Korean-Causal</p>
-            </div>
-          </div>
+        <div class="card">
+          <img src="./images/seoul.jpg">
+          <a href="#seoul-delights" class="card-text">Seoul Delights</a>
+          <p>Korean &bullet; Casual &bullet; $$</p>
+        </div>
+        <div class="card">
+          <img src="./images/sneakers.jpg">
+          <a href="#sneaker-heads" class="card-text">Sneaker Geeks</a>
+          <p>Street &bullet; Casual &bullet; $$</p>
+        </div>
+        <div class="card">
+          <img src="./images/books.jpg">
+          <a href="#chapters" class="card-text">Reading Jocks</a>
+          <p>Library &bullet; Quiet &bullet; $</p>
         </div>
       </div>
-      <!----------------------------------------------->
-      <!-- JS: Boostrap, Firebase, API related    -->
-      <!----------------------------------------------->
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-        </script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-        </script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-        </script>
+    </div>
+  </div>
+  <!----------------------------------------------->
+  <!-- JS: Boostrap, Firebase, API related    -->
+  <!----------------------------------------------->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 
-      <!--------------------------------------------------------------------->
-      <!-- JS files: Your own JavaScript functions included here    -->
-      <!--------------------------------------------------------------------->
+  <!--------------------------------------------------------------------->
+  <!-- JS files: Your own JavaScript functions included here    -->
+  <!--------------------------------------------------------------------->
 
 </body>
 <nav class="navbar fixed-bottom navbar-light bg-light">
