--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap for Mobile-first, and JQuery -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="styles/blah.css">
     <!-- Optional styles and scripts of your own -->
 
 
@@ -53,28 +53,32 @@
                 </ul>
             </div>
     </nav>
-    <div class="text-center">
-        <img src="..." class="rounded" alt="...">
-    </div>
-    <p>Burger Barn</p>
-    <div class="progress">
-        <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-            aria-valuemax="100"></div>
-    </div>
-    <p>Osaka Castle</p>
-    <div class="progress">
-        <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-            aria-valuemax="100"></div>
-    </div>
-    <p>Naan King</p>
-    <div class="progress">
-        <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
-            aria-valuemax="100"></div>
-    </div>
-    <p>Ristorante Feettucino</p>
-    <div class="progress">
-        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
-            aria-valuemax="100"></div>
+    <div class="container">
+        <div class="text-center">
+            <img src="images/robson-map.PNG" class="map" alt="robson-square">
+        </div>
+        <div class="restaurant-names">
+            <p>Burger Barn</p>
+            <div class="progress">
+                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p>Osaka Castle</p>
+            <div class="progress">
+                <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p>Naan King</p>
+            <div class="progress">
+                <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p>Ristorante Feettucino</p>
+            <div class="progress">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        </div>
     </div>
 
 
