linked js files

--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
   <!-- JS files: Your own JavaScript functions included here    -->
   <!--------------------------------------------------------------------->
   <script src="scripts/blah.js"></script>
+  <script src="firebase_api_team3.js"></script>
+
 
 
 
