--- a/profile.html
+++ b/profile.html
@@ -58,6 +58,10 @@
     <!--------------------------------------------------------------------->
     <!-- JS files: Your own JavaScript functions included here    -->
     <!--------------------------------------------------------------------->
+
+    <script src="scripts/blah.js"></script>
+    <script src="firebase_api_team3.js"></script>
+
     <div class="container">
     <img src="./images/profile_pic.jpg" alt="random-girl">
     <p>Sarah Veribizi</p>
