--- a/login.html
+++ b/login.html
@@ -42,7 +42,8 @@
     <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
 
     <!-- Link to the api keys for your firebase project -->
-    <script src="scripts/firebase_api_team3.js"></script>
+    <script src="scripts/blah.js"></script>
+    <script src="firebase_api_team3.js"></script>
 
     <!--------------------------------------------------------------------->
     <!-- JS files: Your own JavaScript functions included here    -->
