--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
 
     <!-- Optional styles and scripts of your own -->
     <link rel="stylesheet" href="styles/blah.css">
+    <link rel="stylesheet" href="styles/login.css">
 
 </head>
 
