--- a/main.html
+++ b/main.html
@@ -24,61 +24,15 @@
     <!-- The following is HTML for layout -->
     <!-------------------------------------->
     <!-- Header Navigation Bar -->
-    <header><a class="navbar-brand" href="">Restaurant</a></header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-            <span class="navbar-toggler-icon"></span>
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    Nearby <svg width="1em" height="1em" viewBox="0 0 16 16"
-                        class="position-absolute top-100 start-50 translate-middle mt-1 bi bi-caret-down-fill"
-                        fill="#212529" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                    </svg>
-                </button>
-            </div>
-            <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
-            </div>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">my data</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="profile.html">my profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">login/signup</a>
-                    </li>
-                </ul>
-            </div>
-    </nav>
-    <div class="container">
-        <div class="text-center">
-            <img src="images/robson-map.PNG" class="map" alt="robson-square">
+    <div class="center">
+        <div class="app-name">
+        <div class="container">
+            <h1 class="display-4">AVS's QUEUEFORWARD</h1>
         </div>
-        <div class="restaurant-names">
-            <p>Burger Barn</p>
-            <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p>Osaka Castle</p>
-            <div class="progress">
-                <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p>Naan King</p>
-            <div class="progress">
-                <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p>Ristorante Feettucino</p>
-            <div class="progress">
-                <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="container">
+            <h1 class="display-4">Restaurants</h1>
+            <div class="restaurant-card">
             </div>
         </div>
     </div>
@@ -105,5 +59,10 @@
 
 
 </body>
+<nav class="navbar fixed-bottom navbar-light bg-info">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">AVS</a>
+    </div>
+</nav>
 
 </html>
