--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div id="webcam-go-here"> </div>
+    </div>
   </div>
   <!----------------------------------------------->
   <!-- JS: Boostrap, JQuery, Firebase, API related    -->
@@ -154,7 +158,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
@@ -168,8 +172,21 @@
   <!--------------------------------------------------------------------->
   <script src="scripts/blah.js"></script>
 
-
-
+  <script>
+    function displayWebcams() {
+      db.collection("Restaurants")
+        //.where("fields.geo_local_area", "in", ["Downtown"])   //Amazing New Query "in"
+        .get()
+        .then(function (snap) { //get collection
+          snap.forEach(function (doc) { //cycle thru them
+            var name = doc.data().fields.name; //get the name, create DOM with id
+            //$("#webcams-go-here").append("<h1 id='" + doc.id + "'> " + name + "</h1>");
+            $('#webcam-goes-here').append("<p id = ${doc.id}> ${name} </p>");
+          })
+        })
+    }
+    displayWebcams();
+  </script>
 
 </body>
 <nav class="navbar fixed-bottom navbar-light bg-info">
